Fix layout problem when opening extension toolbar (#418)

--- a/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
+++ b/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
@@ -277,6 +277,7 @@
   .main-container {
     margin-left: 30px;
     margin-top: 20px;
+    padding-bottom: 200px;
     flex-grow: 1;
     overflow: hidden;
 
